Spacing correction to blog-aside

--- a/src/styles/components/_blog-aside.scss
+++ b/src/styles/components/_blog-aside.scss
@@ -115,7 +115,11 @@
   }
 
   &__articles {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
     padding-inline: $space-0;
+    margin-block: 0 40px;
   }
 
   &__article {
@@ -139,7 +143,7 @@
     color: $color-text-primary;
     font-size: $fz-m;
     line-height: $lh-md;
-    margin-block: $space-md;
+    margin-block: 0;
     @include link-style;
   }
 }
