--- a/src/styles/components/_related-articles.scss
+++ b/src/styles/components/_related-articles.scss
@@ -20,7 +20,7 @@
 
     @include tablet {
       flex-direction: row;
-      align-items: center;
+      align-items: baseline;
       margin-bottom: $space-0;
     }
   }
